# binance-testnet-liquidity-provider

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.dev.txt  requirements.txt  start.py
.circleci/: config.yml
bot/: exceptions.py  logger.py  testnet_mm.py  testnet_mm_state.py
lib/binance/: __init__.py
lib/binance/rest/: client.py  exceptions.py  util.py
lib/binance/websocket/: client.py
tests/binance/: mock_responses.py  test_rest_api.py
tests/bot/: mock_responses.py  test_testnet_mm.py
