[tool.poetry]
name = "binance-testnet-lp"
version = "0.1.0"
description = ""
authors = ["Josh Teng <joshteng@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
